<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="14dp"
        android:paddingBottom="8dp"
        android:paddingTop="6dp"
        android:background="@drawable/rectangle_bottom_border">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stepify"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="28sp" />
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/baseline_settings_24"
            android:contentDescription="@string/settingsDescription" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stepsLabel"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>
            <com.example.steptracker.CircularTextView
                android:id="@+id/circularTextView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/circular_progress_bar"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightGray"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:text="@string/todayGoalSetterString"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friendsLabel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="30sp"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:padding="20dp"
                app:strokeColor="@color/black"
                app:cardBackgroundColor="@color/gray"
                app:strokeWidth="6dp"
                android:layout_marginBottom="40dp"
                app:cardCornerRadius="20dp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_margin="20dp"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/black"
                    app:strokeWidth="6dp"
                    app:cardCornerRadius="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:text="@string/friends"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textColor="@color/lightGray"
                            android:textSize="18sp"
                            android:text="@string/steps"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leaderboardLabel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:strokeColor="@color/black"
                app:cardBackgroundColor="@color/gray"
                app:strokeWidth="6dp"
                android:layout_marginBottom="22dp"
                app:cardCornerRadius="20dp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_margin="20dp"
                    app:strokeColor="@color/black"
                    app:cardBackgroundColor="@color/black"
                    app:strokeWidth="6dp"
                    app:cardCornerRadius="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:text="@string/friends"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textColor="@color/lightGray"
                            android:textSize="18sp"
                            android:text="@string/steps"/>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>